@@ -200,6 +200,34 @@ module Nokogiri
         nokogiri = Nokogiri::HTML.parse(doc)
         assert nokogiri.xpath(xpath)
       end
+
+      def test_custom_xpath_handler_with_args_under_gc_pressure
+        # see http://github.com/tenderlove/nokogiri/issues/#issue/345
+        tool_inspector = Class.new do
+          def name_equals(nodeset, name, *args)
+            nodeset.all? do |node|
+              args.each { |thing| thing.inspect }
+              node["name"] == name
+            end
+          end
+        end.new
+
+        xml = <<-EOXML
+          <toolbox>
+            #{"<tool name='hammer'/><tool name='wrench'/>" * 10}
+          </toolbox>
+        EOXML
+        doc = Nokogiri::XML xml
+
+        # long list of long arguments, to apply GC pressure during
+        # ruby_funcall argument marshalling
+        xpath = ["//tool[name_equals(.,'hammer'"]
+        1000.times { xpath << "'unused argument #{'x' * 1000}'" }
+        xpath << "'unused argument')]"
+        xpath = xpath.join(',')
+
+        assert_equal doc.xpath("//tool[@name='hammer']"), doc.xpath(xpath, tool_inspector)
+      end
     end
   end
 end
